--- a/main_window.ui
+++ b/main_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1364</width>
-    <height>680</height>
+    <width>1685</width>
+    <height>992</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -43,7 +43,7 @@
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>2</number>
     </property>
     <property name="elideMode">
      <enum>Qt::ElideLeft</enum>
@@ -774,7 +774,7 @@
      <widget class="QComboBox" name="comboBox_1_etap">
       <property name="geometry">
        <rect>
-        <x>130</x>
+        <x>80</x>
         <y>70</y>
         <width>151</width>
         <height>26</height>
@@ -784,7 +784,7 @@
      <widget class="QLabel" name="label_9">
       <property name="geometry">
        <rect>
-        <x>30</x>
+        <x>50</x>
         <y>50</y>
         <width>141</width>
         <height>16</height>
@@ -797,9 +797,9 @@
      <widget class="QComboBox" name="comboBox_page">
       <property name="geometry">
        <rect>
-        <x>640</x>
-        <y>40</y>
-        <width>151</width>
+        <x>600</x>
+        <y>70</y>
+        <width>111</width>
         <height>26</height>
        </rect>
       </property>
@@ -807,8 +807,8 @@
      <widget class="QLabel" name="label_10">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>70</y>
+        <x>20</x>
+        <y>72</y>
         <width>60</width>
         <height>16</height>
        </rect>
@@ -817,10 +817,10 @@
        <string>1-й этап:</string>
       </property>
      </widget>
-     <widget class="QSpinBox" name="spinBox_kol_grupp">
+     <widget class="QSpinBox" name="spinBox_kol_group">
       <property name="geometry">
        <rect>
-        <x>340</x>
+        <x>290</x>
         <y>70</y>
         <width>51</width>
         <height>24</height>
@@ -836,8 +836,8 @@
      <widget class="QLabel" name="label_11">
       <property name="geometry">
        <rect>
-        <x>290</x>
-        <y>70</y>
+        <x>240</x>
+        <y>72</y>
         <width>41</width>
         <height>16</height>
        </rect>
@@ -849,8 +849,8 @@
      <widget class="QLabel" name="label_12">
       <property name="geometry">
        <rect>
-        <x>430</x>
-        <y>70</y>
+        <x>350</x>
+        <y>72</y>
         <width>241</width>
         <height>16</height>
        </rect>
@@ -862,8 +862,8 @@
      <widget class="QPushButton" name="Button_table_made">
       <property name="geometry">
        <rect>
-        <x>712</x>
-        <y>70</y>
+        <x>710</x>
+        <y>68</y>
         <width>81</width>
         <height>32</height>
        </rect>
@@ -875,14 +875,14 @@
      <widget class="QLabel" name="label_13">
       <property name="geometry">
        <rect>
-        <x>640</x>
-        <y>10</y>
-        <width>151</width>
+        <x>610</x>
+        <y>40</y>
+        <width>91</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>Ориентация страницы</string>
+       <string>Вид страницы</string>
       </property>
      </widget>
     </widget>
@@ -890,6 +890,56 @@
      <attribute name="title">
       <string>Группы</string>
      </attribute>
+     <widget class="QGroupBox" name="groupBox_filter_group">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>110</y>
+        <width>771</width>
+        <height>80</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+        <weight>50</weight>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="title">
+       <string>Фильтр</string>
+      </property>
+      <widget class="QComboBox" name="comboBox_group">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>50</y>
+         <width>131</width>
+         <height>26</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_14">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>30</y>
+         <width>91</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>Courier New</family>
+         <pointsize>14</pointsize>
+         <italic>true</italic>
+        </font>
+       </property>
+       <property name="text">
+        <string>по группам</string>
+       </property>
+      </widget>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_3">
      <attribute name="title">
@@ -1029,15 +1079,15 @@
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="page">
      <property name="geometry">
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>199</width>
-       <height>255</height>
+       <width>98</width>
+       <height>28</height>
       </rect>
      </property>
      <attribute name="label">
@@ -1091,8 +1141,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>199</width>
-       <height>255</height>
+       <width>98</width>
+       <height>28</height>
       </rect>
      </property>
      <attribute name="label">
@@ -1169,8 +1219,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>199</width>
-       <height>255</height>
+       <width>98</width>
+       <height>28</height>
       </rect>
      </property>
      <attribute name="label">
@@ -1214,8 +1264,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>199</width>
-       <height>255</height>
+       <width>98</width>
+       <height>28</height>
       </rect>
      </property>
      <attribute name="label">
@@ -1227,8 +1277,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>199</width>
-       <height>255</height>
+       <width>98</width>
+       <height>28</height>
       </rect>
      </property>
      <attribute name="label">
@@ -1276,9 +1326,9 @@
       </widget>
      </item>
      <item row="1" column="0">
-      <widget class="QPushButton" name="Button_db">
+      <widget class="QPushButton" name="Button_group">
        <property name="text">
-        <string>Создание DB</string>
+        <string>Создание групп</string>
        </property>
       </widget>
      </item>
@@ -1298,7 +1348,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1364</width>
+     <width>1685</width>
      <height>21</height>
     </rect>
    </property>
