--- a/main_window.ui
+++ b/main_window.ui
@@ -20,7 +20,7 @@
       <x>240</x>
       <y>0</y>
       <width>901</width>
-      <height>241</height>
+      <height>245</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -43,7 +43,7 @@
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>2</number>
     </property>
     <property name="elideMode">
      <enum>Qt::ElideLeft</enum>
@@ -747,156 +747,232 @@
      <attribute name="title">
       <string>Система</string>
      </attribute>
-     <widget class="QLabel" name="label_8">
+     <widget class="QFrame" name="frame">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>20</y>
-        <width>201</width>
-        <height>16</height>
+        <x>3</x>
+        <y>9</y>
+        <width>591</width>
+        <height>201</height>
        </rect>
       </property>
-      <property name="font">
-       <font>
-        <family>Times New Roman</family>
-        <pointsize>16</pointsize>
-        <weight>75</weight>
-        <italic>true</italic>
-        <bold>true</bold>
-        <underline>true</underline>
-        <strikeout>false</strikeout>
-       </font>
+      <property name="frameShape">
+       <enum>QFrame::Box</enum>
       </property>
-      <property name="text">
-       <string>Всего участников:</string>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
       </property>
+      <widget class="QSpinBox" name="spinBox_kol_group">
+       <property name="geometry">
+        <rect>
+         <x>300</x>
+         <y>30</y>
+         <width>51</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="minimum">
+        <number>1</number>
+       </property>
+       <property name="maximum">
+        <number>48</number>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_12">
+       <property name="geometry">
+        <rect>
+         <x>350</x>
+         <y>40</y>
+         <width>241</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>TextLabel</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_11">
+       <property name="geometry">
+        <rect>
+         <x>230</x>
+         <y>40</y>
+         <width>41</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Групп</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_9">
+       <property name="geometry">
+        <rect>
+         <x>60</x>
+         <y>40</y>
+         <width>141</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Этапы соревнования</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_8">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>15</y>
+         <width>201</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>Times New Roman</family>
+         <pointsize>16</pointsize>
+         <weight>75</weight>
+         <italic>true</italic>
+         <bold>true</bold>
+         <underline>true</underline>
+         <strikeout>false</strikeout>
+        </font>
+       </property>
+       <property name="text">
+        <string>Всего участников:</string>
+       </property>
+      </widget>
      </widget>
-     <widget class="QComboBox" name="comboBox_page_1">
+     <widget class="QFrame" name="frame_2">
       <property name="geometry">
        <rect>
         <x>600</x>
-        <y>70</y>
-        <width>111</width>
-        <height>26</height>
+        <y>10</y>
+        <width>291</width>
+        <height>201</height>
        </rect>
       </property>
-     </widget>
-     <widget class="QSpinBox" name="spinBox_kol_group">
-      <property name="geometry">
-       <rect>
-        <x>290</x>
-        <y>70</y>
-        <width>51</width>
-        <height>24</height>
-       </rect>
+      <property name="frameShape">
+       <enum>QFrame::Box</enum>
       </property>
-      <property name="minimum">
-       <number>1</number>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
       </property>
-      <property name="maximum">
-       <number>48</number>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_11">
-      <property name="geometry">
-       <rect>
-        <x>240</x>
-        <y>72</y>
-        <width>41</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Групп</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_12">
-      <property name="geometry">
-       <rect>
-        <x>350</x>
-        <y>72</y>
-        <width>241</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>TextLabel</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="Button_1etap_made">
-      <property name="geometry">
-       <rect>
-        <x>710</x>
-        <y>68</y>
-        <width>81</width>
-        <height>32</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Создать</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_13">
-      <property name="geometry">
-       <rect>
-        <x>610</x>
-        <y>40</y>
-        <width>91</width>
-        <height>20</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Вид страницы</string>
-      </property>
-     </widget>
-     <widget class="QCheckBox" name="checkBox_2">
-      <property name="geometry">
-       <rect>
-        <x>740</x>
-        <y>40</y>
-        <width>21</width>
-        <height>20</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-     <widget class="QComboBox" name="comboBox_page_2">
-      <property name="geometry">
-       <rect>
-        <x>600</x>
-        <y>100</y>
-        <width>111</width>
-        <height>26</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="Button_2etap_made">
-      <property name="geometry">
-       <rect>
-        <x>710</x>
-        <y>100</y>
-        <width>81</width>
-        <height>32</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Создать</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_9">
-      <property name="geometry">
-       <rect>
-        <x>80</x>
-        <y>50</y>
-        <width>141</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Этапы соревнования</string>
-      </property>
+      <widget class="QComboBox" name="comboBox_page_2">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>53</y>
+         <width>111</width>
+         <height>26</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="comboBox_page_1">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>30</y>
+         <width>111</width>
+         <height>26</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="Button_choice_group">
+       <property name="geometry">
+        <rect>
+         <x>200</x>
+         <y>29</y>
+         <width>91</width>
+         <height>32</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>Times New Roman</family>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Жеребьевка</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="Button_2etap_made">
+       <property name="geometry">
+        <rect>
+         <x>120</x>
+         <y>28</y>
+         <width>81</width>
+         <height>32</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>Times New Roman</family>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Создать</string>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="comboBox_filter_choice">
+       <property name="geometry">
+        <rect>
+         <x>160</x>
+         <y>170</y>
+         <width>131</width>
+         <height>26</height>
+        </rect>
+       </property>
+       <property name="editable">
+        <bool>true</bool>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="checkBox_2">
+       <property name="geometry">
+        <rect>
+         <x>260</x>
+         <y>10</y>
+         <width>21</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_13">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>0</y>
+         <width>91</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Вид страницы</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="Button_1etap_made">
+       <property name="geometry">
+        <rect>
+         <x>120</x>
+         <y>51</y>
+         <width>81</width>
+         <height>32</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>Times New Roman</family>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Создать</string>
+       </property>
+      </widget>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_2">
@@ -1565,8 +1641,11 @@
     <property name="sizeAdjustPolicy">
      <enum>QAbstractScrollArea::AdjustToContents</enum>
     </property>
+    <property name="autoScroll">
+     <bool>false</bool>
+    </property>
     <property name="editTriggers">
-     <set>QAbstractItemView::NoEditTriggers</set>
+     <set>QAbstractItemView::SelectedClicked</set>
     </property>
     <property name="gridStyle">
      <enum>Qt::SolidLine</enum>
@@ -1619,7 +1698,7 @@
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="page">
      <property name="geometry">
@@ -1789,7 +1868,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>260</y>
+        <y>264</y>
         <width>21</width>
         <height>20</height>
        </rect>
@@ -1802,8 +1881,8 @@
       <property name="geometry">
        <rect>
         <x>69</x>
-        <y>-3</y>
-        <width>141</width>
+        <y>-2</y>
+        <width>142</width>
         <height>26</height>
        </rect>
       </property>
@@ -1825,7 +1904,7 @@
       <property name="geometry">
        <rect>
         <x>6</x>
-        <y>20</y>
+        <y>23</y>
         <width>60</width>
         <height>16</height>
        </rect>
@@ -1839,7 +1918,30 @@
        <rect>
         <x>69</x>
         <y>20</y>
-        <width>141</width>
+        <width>142</width>
+        <height>26</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_17">
+      <property name="geometry">
+       <rect>
+        <x>6</x>
+        <y>45</y>
+        <width>60</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>3-й этап:</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBox_etap_3">
+      <property name="geometry">
+       <rect>
+        <x>69</x>
+        <y>42</y>
+        <width>142</width>
         <height>26</height>
        </rect>
       </property>
