--- a/main_window.ui
+++ b/main_window.ui
@@ -752,7 +752,7 @@
        <rect>
         <x>3</x>
         <y>9</y>
-        <width>591</width>
+        <width>681</width>
         <height>201</height>
        </rect>
       </property>
@@ -845,10 +845,10 @@
      <widget class="QFrame" name="frame_2">
       <property name="geometry">
        <rect>
-        <x>600</x>
-        <y>10</y>
-        <width>291</width>
-        <height>201</height>
+        <x>688</x>
+        <y>9</y>
+        <width>202</width>
+        <height>132</height>
        </rect>
       </property>
       <property name="frameShape">
@@ -861,7 +861,7 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>53</y>
+         <y>52</y>
          <width>111</width>
          <height>26</height>
         </rect>
@@ -871,36 +871,17 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>30</y>
+         <y>29</y>
          <width>111</width>
          <height>26</height>
         </rect>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="Button_choice_group">
-       <property name="geometry">
-        <rect>
-         <x>200</x>
-         <y>29</y>
-         <width>91</width>
-         <height>32</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>Times New Roman</family>
-         <pointsize>12</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Жеребьевка</string>
        </property>
       </widget>
       <widget class="QPushButton" name="Button_2etap_made">
        <property name="geometry">
         <rect>
          <x>120</x>
-         <y>28</y>
+         <y>27</y>
          <width>81</width>
          <height>32</height>
         </rect>
@@ -915,24 +896,11 @@
         <string>Создать</string>
        </property>
       </widget>
-      <widget class="QComboBox" name="comboBox_filter_choice">
-       <property name="geometry">
-        <rect>
-         <x>160</x>
-         <y>170</y>
-         <width>131</width>
-         <height>26</height>
-        </rect>
-       </property>
-       <property name="editable">
-        <bool>true</bool>
-       </property>
-      </widget>
       <widget class="QCheckBox" name="checkBox_2">
        <property name="geometry">
         <rect>
-         <x>260</x>
-         <y>10</y>
+         <x>169</x>
+         <y>7</y>
          <width>21</width>
          <height>20</height>
         </rect>
@@ -944,8 +912,8 @@
       <widget class="QLabel" name="label_13">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>0</y>
+         <x>18</x>
+         <y>4</y>
          <width>91</width>
          <height>20</height>
         </rect>
@@ -958,7 +926,7 @@
        <property name="geometry">
         <rect>
          <x>120</x>
-         <y>51</y>
+         <y>50</y>
          <width>81</width>
          <height>32</height>
         </rect>
@@ -971,6 +939,74 @@
        </property>
        <property name="text">
         <string>Создать</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QFrame" name="frame_3">
+      <property name="geometry">
+       <rect>
+        <x>688</x>
+        <y>146</y>
+        <width>202</width>
+        <height>64</height>
+       </rect>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+      <widget class="QComboBox" name="comboBox_filter_choice">
+       <property name="geometry">
+        <rect>
+         <x>80</x>
+         <y>0</y>
+         <width>121</width>
+         <height>26</height>
+        </rect>
+       </property>
+       <property name="editable">
+        <bool>true</bool>
+       </property>
+      </widget>
+      <widget class="QRadioButton" name="radioButton_3">
+       <property name="geometry">
+        <rect>
+         <x>4</x>
+         <y>0</y>
+         <width>71</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Группы</string>
+       </property>
+      </widget>
+      <widget class="QRadioButton" name="radioButton_2">
+       <property name="geometry">
+        <rect>
+         <x>4</x>
+         <y>18</y>
+         <width>51</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>ПФ</string>
+       </property>
+      </widget>
+      <widget class="QRadioButton" name="radioButton">
+       <property name="geometry">
+        <rect>
+         <x>4</x>
+         <y>36</y>
+         <width>80</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Финалы</string>
        </property>
       </widget>
      </widget>
