--- a/main_window.ui
+++ b/main_window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1396</width>
-    <height>699</height>
+    <height>698</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -43,7 +43,7 @@
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>2</number>
     </property>
     <property name="elideMode">
      <enum>Qt::ElideLeft</enum>
@@ -750,10 +750,10 @@
      <widget class="QFrame" name="frame">
       <property name="geometry">
        <rect>
-        <x>3</x>
-        <y>9</y>
+        <x>1</x>
+        <y>26</y>
         <width>681</width>
-        <height>201</height>
+        <height>183</height>
        </rect>
       </property>
       <property name="frameShape">
@@ -765,8 +765,8 @@
       <widget class="QSpinBox" name="spinBox_kol_group">
        <property name="geometry">
         <rect>
-         <x>300</x>
-         <y>30</y>
+         <x>166</x>
+         <y>4</y>
          <width>51</width>
          <height>24</height>
         </rect>
@@ -781,11 +781,17 @@
       <widget class="QLabel" name="label_12">
        <property name="geometry">
         <rect>
-         <x>350</x>
-         <y>40</y>
+         <x>283</x>
+         <y>7</y>
          <width>241</width>
          <height>16</height>
         </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>Times New Roman</family>
+         <pointsize>14</pointsize>
+        </font>
        </property>
        <property name="text">
         <string>TextLabel</string>
@@ -794,51 +800,60 @@
       <widget class="QLabel" name="label_11">
        <property name="geometry">
         <rect>
-         <x>230</x>
-         <y>40</y>
-         <width>41</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Групп</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_9">
-       <property name="geometry">
-        <rect>
-         <x>60</x>
-         <y>40</y>
-         <width>141</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Этапы соревнования</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_8">
-       <property name="geometry">
-        <rect>
-         <x>20</x>
-         <y>15</y>
-         <width>201</width>
+         <x>223</x>
+         <y>7</y>
+         <width>55</width>
          <height>16</height>
         </rect>
        </property>
        <property name="font">
         <font>
          <family>Times New Roman</family>
-         <pointsize>16</pointsize>
-         <weight>75</weight>
-         <italic>true</italic>
-         <bold>true</bold>
-         <underline>true</underline>
-         <strikeout>false</strikeout>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>Всего участников:</string>
+        <string>групп:</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_9">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>7</y>
+         <width>147</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>Times New Roman</family>
+         <pointsize>14</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Этапы соревнования - </string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_19">
+       <property name="geometry">
+        <rect>
+         <x>570</x>
+         <y>7</y>
+         <width>101</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>Times New Roman</family>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>TextLabel</string>
        </property>
       </widget>
      </widget>
@@ -846,9 +861,9 @@
       <property name="geometry">
        <rect>
         <x>688</x>
-        <y>9</y>
+        <y>26</y>
         <width>202</width>
-        <height>132</height>
+        <height>47</height>
        </rect>
       </property>
       <property name="frameShape">
@@ -857,76 +872,39 @@
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <widget class="QComboBox" name="comboBox_page_2">
+      <widget class="QComboBox" name="comboBox_page_vid">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>52</y>
-         <width>111</width>
+         <x>2</x>
+         <y>18</y>
+         <width>119</width>
          <height>26</height>
         </rect>
-       </property>
-      </widget>
-      <widget class="QComboBox" name="comboBox_page_1">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>29</y>
-         <width>111</width>
-         <height>26</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="Button_2etap_made">
-       <property name="geometry">
-        <rect>
-         <x>120</x>
-         <y>27</y>
-         <width>81</width>
-         <height>32</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>Times New Roman</family>
-         <pointsize>12</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Создать</string>
-       </property>
-      </widget>
-      <widget class="QCheckBox" name="checkBox_2">
-       <property name="geometry">
-        <rect>
-         <x>169</x>
-         <y>7</y>
-         <width>21</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
        </property>
       </widget>
       <widget class="QLabel" name="label_13">
        <property name="geometry">
         <rect>
-         <x>18</x>
-         <y>4</y>
+         <x>10</x>
+         <y>0</y>
          <width>91</width>
          <height>20</height>
         </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>Times New Roman</family>
+        </font>
        </property>
        <property name="text">
         <string>Вид страницы</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="Button_1etap_made">
+      <widget class="QPushButton" name="Button_etap_made">
        <property name="geometry">
         <rect>
          <x>120</x>
-         <y>50</y>
+         <y>15</y>
          <width>81</width>
          <height>32</height>
         </rect>
@@ -1009,6 +987,76 @@
         <string>Финалы</string>
        </property>
       </widget>
+     </widget>
+     <widget class="QLabel" name="label_18">
+      <property name="geometry">
+       <rect>
+        <x>730</x>
+        <y>4</y>
+        <width>121</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Times New Roman</family>
+        <pointsize>16</pointsize>
+        <weight>50</weight>
+        <italic>true</italic>
+        <bold>false</bold>
+        <underline>true</underline>
+       </font>
+      </property>
+      <property name="text">
+       <string>Создание этапа</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_8">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>4</y>
+        <width>211</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Times New Roman</family>
+        <pointsize>16</pointsize>
+        <weight>75</weight>
+        <italic>true</italic>
+        <bold>true</bold>
+        <underline>true</underline>
+        <strikeout>false</strikeout>
+       </font>
+      </property>
+      <property name="text">
+       <string>Всего участников:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_20">
+      <property name="geometry">
+       <rect>
+        <x>730</x>
+        <y>123</y>
+        <width>121</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Times New Roman</family>
+        <pointsize>16</pointsize>
+        <weight>50</weight>
+        <italic>true</italic>
+        <bold>false</bold>
+        <underline>true</underline>
+       </font>
+      </property>
+      <property name="text">
+       <string>Жеребъевка</string>
+      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_2">
@@ -1636,6 +1684,48 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
+    <widget class="QPushButton" name="Button_2etap_made">
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>100</y>
+       <width>81</width>
+       <height>32</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Создать</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="comboBox_page_2">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>60</y>
+       <width>111</width>
+       <height>26</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBox_2">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>140</y>
+       <width>21</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
    </widget>
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
@@ -1741,8 +1831,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>219</width>
-       <height>285</height>
+       <width>100</width>
+       <height>30</height>
       </rect>
      </property>
      <attribute name="label">
@@ -1796,8 +1886,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>219</width>
-       <height>285</height>
+       <width>100</width>
+       <height>30</height>
       </rect>
      </property>
      <attribute name="label">
@@ -1918,7 +2008,7 @@
        <rect>
         <x>69</x>
         <y>-2</y>
-        <width>142</width>
+        <width>146</width>
         <height>26</height>
        </rect>
       </property>
@@ -1954,7 +2044,7 @@
        <rect>
         <x>69</x>
         <y>20</y>
-        <width>142</width>
+        <width>146</width>
         <height>26</height>
        </rect>
       </property>
@@ -1977,7 +2067,7 @@
        <rect>
         <x>69</x>
         <y>42</y>
-        <width>142</width>
+        <width>146</width>
         <height>26</height>
        </rect>
       </property>
@@ -1988,8 +2078,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>219</width>
-       <height>285</height>
+       <width>100</width>
+       <height>30</height>
       </rect>
      </property>
      <attribute name="label">
@@ -2001,8 +2091,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>219</width>
-       <height>285</height>
+       <width>100</width>
+       <height>30</height>
       </rect>
      </property>
      <attribute name="label">
@@ -2014,8 +2104,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>219</width>
-       <height>285</height>
+       <width>100</width>
+       <height>30</height>
       </rect>
      </property>
      <attribute name="label">
